// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test simple array 1`] = `
Object {
  "errorMessage": "Object should have at least 3 items.",
  "isValid": false,
  "items": Array [
    Object {
      "errorMessage": "",
      "isValid": true,
    },
    Object {
      "errorMessage": "",
      "isValid": true,
    },
  ],
}
`;

exports[`Test simple array values 1`] = `
Object {
  "errorMessage": "Object should have at least 3 items.",
  "isValid": false,
  "items": Array [
    Object {
      "errorMessage": "0 should be at least 5 characters.",
      "isValid": false,
    },
    Object {
      "errorMessage": "",
      "isValid": true,
    },
  ],
}
`;
